# divisors

./: LICENSE  meson.build
include/: trial_division.hpp
include/divs/: trial_division.hpp
src/: main.cpp  meson.build
